<resources>
    <string name="app_name">IdeentyIdTest</string>
    <string name="keystore_alias">userPassword</string>

    <!-- Error -->
    <string name="user_exist_error">Такой пользователь существует</string>
    <string name="user_not_exist_error">Пользователя не существует</string>
    <string name="user_not_verified">Неправильно введены данные</string>

    <!-- SignChoice -->
    <string name="fragment_sign_choice_sign_in">Войти</string>
    <string name="fragment_sign_choice_sign_up">Зарегестрироваться</string>
    <string name="fragment_sign_choice_title">Вход/Регистрация</string>

    <!-- SignIn -->
    <string name="fragment_sign_in_login">Логин</string>
    <string name="fragment_sign_in_password">Пароль</string>
    <string name="fragment_sign_in_btn">Войти</string>
    <string name="fragment_sign_in_title">Вход</string>

    <!-- SignUp -->
    <string name="fragment_sign_up_promt">Для продолжения регистрации отсканируйте данные</string>

    <!-- Home -->
    <string name="home_menu_server">Сервер</string>
    <string name="home_menu_local">База данных</string>
    <string name="fragment_saved_photo_empty_text">Пока здесь пусто.Лайкните\nфото, чтобы здесь что-то появилось.</string>
</resources>